--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "choices.js": "^4.1.4",
+    "jquery": "^3.3.1",
+    "jquery-drilldown": "^1.1.2",
     "nouislider": "^12.1.0",
     "swiper": "^4.4.6",
     "uikit": "^3.0.0-rc.26"
